--- a/.force/constraints/supabase-project-access-constraint.json
+++ b/.force/constraints/supabase-project-access-constraint.json
@@ -7,7 +7,7 @@
   "impact": "Cannot execute database migrations or Edge Function deployments with current CLI setup",
   "resolution_options": [
     "Use the available 'vantagepoint' project and update application configuration",
-    "Switch to the correct Supabase account that has access to 'iqivodptfhiatllakuap' project", 
+    "Switch to the correct Supabase account that has access to 'iqivodptfhiatllakuap' project",
     "Create a new project that matches the application requirements"
   ],
   "chosen_approach": "Switch to the correct Supabase account via environment isolation",
@@ -15,5 +15,11 @@
   "created_at": "2025-06-24T16:30:00Z",
   "updated_at": "2025-06-24T16:35:00Z",
   "session_id": "phase-2-core-features-implementation",
-  "force_pattern": "environment-isolation-solution"
+  "force_pattern": "environment-isolation-solution",
+  "enforcement": {
+    "level": "warning",
+    "validation_rules": [
+      "Validation rule description"
+    ]
+  }
 }
