--- a/.force/patterns/branch_task_end_tasks.json
+++ b/.force/patterns/branch_task_end_tasks.json
@@ -1,7 +1,6 @@
 {
   "$schema": "../schemas/force-schema.json",
   "id": "branch_task_end_tasks",
-  "type": "pattern",
   "name": "Branch Task End Tasks",
   "description": "Comprehensive pattern for handling end-of-branch tasks including quality checks, documentation updates, and release preparation.",
   "category": "workflow",
@@ -43,13 +42,13 @@
       {
         "name": "Branch End Task Checklist",
         "checklist": [
-          "✅ Code quality score > 80%",
-          "✅ Security scan passed",
-          "✅ Documentation updated",
-          "✅ Tests passing",
-          "✅ Changelog updated",
-          "✅ Version tagged",
-          "✅ Ready for merge"
+          "\u2705 Code quality score > 80%",
+          "\u2705 Security scan passed",
+          "\u2705 Documentation updated",
+          "\u2705 Tests passing",
+          "\u2705 Changelog updated",
+          "\u2705 Version tagged",
+          "\u2705 Ready for merge"
         ]
       },
       {
