--- a/.force/tools/check-release-readiness.json
+++ b/.force/tools/check-release-readiness.json
@@ -1,8 +1,38 @@
 {
-  "id": "check-release-readiness",
-  "type": "tool",
+  "id": "check_release_readiness",
   "name": "Check Release Readiness",
   "description": "Checks if the project is ready for release.",
   "category": "release",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "parameters": {
+    "required": [],
+    "optional": []
+  },
+  "execution": {
+    "strategy": "sequential",
+    "commands": [
+      {
+        "action": "placeholder_action",
+        "description": "Placeholder command description"
+      }
+    ],
+    "validation": {
+      "pre_conditions": [],
+      "post_conditions": [],
+      "error_handling": []
+    }
+  },
+  "metadata": {
+    "created": "2025-07-01T03:54:59.845210Z",
+    "updated": "2025-07-01T03:54:59.845211Z",
+    "version": "1.0.0",
+    "complexity": "medium",
+    "tags": [],
+    "dependencies": [],
+    "performance_metrics": {
+      "avg_execution_time": 0.0,
+      "success_rate": 0.0,
+      "usage_count": 0
+    }
+  }
 }
