Update .gitignore to exclude import recovery files
Removed .vscode/ from ignored files and added import/, import/recovery/, and import/recovery/copilot_chat/ to ignore import recovery files.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ __pycache__
 venv
 
 # Environment-specific files
-.vscode/
 .idea/
 .python-version
 .env
@@ -50,3 +49,8 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
+
+# Ignore import recovery files
+import/
+import/recovery/
+import/recovery/copilot_chat/
