docs: Add comprehensive deployment documentation for Git repository
- Create docs/deployment.md with complete deployment guide:
  - Direct installation from Git repository with pip
  - Development, staging, and production deployment methods
  - Docker containerization with Dockerfile and docker-compose
  - Cloud platform deployment (Heroku, AWS Lambda, Google Cloud Run)
  - CI/CD integration (GitHub Actions, GitLab CI)
  - Environment configuration and security considerations
  - Monitoring, maintenance, and troubleshooting guides

- Create docs/DEPLOYMENT_QUICK_REFERENCE.md for quick commands
- Update README.md with deployment options section
- Update pyproject.toml with deployment guide and MCP config URLs
- Update docs/index.md to include deployment documentation

Provides complete guidance for deploying Dev Sentinel package from:
- pip install git+https://github.com/peguesj/yj-dev_sentinel.git
- Docker containers and cloud platforms
- Development and production environments
- CI/CD pipelines and automated deployment

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,8 @@ Homepage = "https://github.com/peguesj/yj-dev_sentinel"
 Repository = "https://github.com/peguesj/yj-dev_sentinel.git"
 Documentation = "https://dev-sentinel.readthedocs.io"
 "Bug Tracker" = "https://github.com/peguesj/yj-dev_sentinel/issues"
+"Deployment Guide" = "https://github.com/peguesj/yj-dev_sentinel/blob/main/docs/deployment.md"
+"MCP Configuration" = "https://github.com/peguesj/yj-dev_sentinel/tree/main/examples/mcp-configurations"
 
 [project.scripts]
 dev-sentinel = "dev_sentinel.cli:main"
